# Gestor_Clientes

./: .replit  README.md  menu.py  pyproject.toml
tests/: clientes_test.csv  test_database.py
uml/: diagrama_clases.puml
